@@ -15,10 +15,11 @@ import java.io.IOException;
 import static com.mobeedom.android.auto.jyhuremote.App.LOG_TAG;
 
 public class MediaKeysMapper {
-    public static final String SYU_RADIO_PACKAGE="com.syu.radio";
-    public static final String SYU_MUSIC_PACKAGE="com.syu.music";
-    public static final String SYU_BT_PACKAGE="com.syu.bt";
-    public static final String SYU_GENERIC_PACKAGE="com.syu";
+    public static final String SYU_RADIO_PACKAGE = "com.syu.radio";
+    public static final String SYU_MUSIC_PACKAGE = "com.syu.music";
+    public static final String SYU_BT_PACKAGE = "com.syu.bt";
+    public static final String SYU_GENERIC_PACKAGE = "com.syu";
+    public static final String NETFLIX_PACKAGE = "com.netflix.mediaclient";
 
     public static boolean lastPlayState = true;
 
@@ -34,46 +35,85 @@ public class MediaKeysMapper {
                 App.getInstance().volDown();
                 break;
             case KeyEvent.KEYCODE_MEDIA_NEXT:
-//                Toast.makeText(App.getInstance(), "NEXT", Toast.LENGTH_SHORT).show();
-                if(SYU_RADIO_PACKAGE.equals(fgPackage))
+                if (SYU_RADIO_PACKAGE.equals(fgPackage))
                     App.getInstance().radioNext();
-                else if(fgPackage.startsWith(SYU_GENERIC_PACKAGE))
+                else if (fgPackage.startsWith(SYU_GENERIC_PACKAGE))
                     App.getInstance().playerCommand(FinalMain.VA_CMD_KEY_SKIPF);
                 else
                     App.getInstance().mediaNext();
                 break;
             case KeyEvent.KEYCODE_MEDIA_PREVIOUS:
-//                Toast.makeText(App.getInstance(), "PREVIOUS", Toast.LENGTH_SHORT).show();
-                if(SYU_RADIO_PACKAGE.equals(fgPackage))
+                if (SYU_RADIO_PACKAGE.equals(fgPackage))
                     App.getInstance().radioPrev();
-                else if(fgPackage.startsWith(SYU_GENERIC_PACKAGE))
+                else if (fgPackage.startsWith(SYU_GENERIC_PACKAGE))
                     App.getInstance().playerCommand(FinalMain.VA_CMD_KEY_SKIPB);
                 else
                     App.getInstance().mediaPrev();
                 break;
             case KeyEvent.KEYCODE_MEDIA_PLAY_PAUSE:
-//                Toast.makeText(App.getInstance(), "PLAY/PAUSE", Toast.LENGTH_SHORT).show();
-                if(SYU_MUSIC_PACKAGE.equals(fgPackage)) {
-                    App.getInstance().playerCommand(lastPlayState ? FinalMain.VA_CMD_KEY_PAUSE:FinalMain.VA_CMD_KEY_PLAY);
+                if (SYU_MUSIC_PACKAGE.equals(fgPackage)) {
+                    App.getInstance().playerCommand(lastPlayState ? FinalMain.VA_CMD_KEY_PAUSE : FinalMain.VA_CMD_KEY_PLAY);
                     lastPlayState = !lastPlayState;
-                } else
+                } else if (fgPackage.startsWith(NETFLIX_PACKAGE))
+                    execKeyCode(KeyEvent.KEYCODE_ENTER); // NOT Working :-(
+                else
                     App.getInstance().mediaPlayPause();
                 break;
             case KeyEvent.KEYCODE_F1: // GPS
-                Toast.makeText(App.getInstance(), "GPS", Toast.LENGTH_SHORT).show();
                 App.getInstance().customModuleManager(FinalMainServer.MODULE_CODE_MAIN, FinalMain.C_JUMP_PAGE, FinalMain.PAGE_NAVI);
                 break;
-            case KeyEvent.KEYCODE_F2:
-                Toast.makeText(App.getInstance(), "CALL", Toast.LENGTH_SHORT).show();
-                App.getInstance().customModuleManager(FinalMainServer.MODULE_CODE_BT, FinalBt.C_DIAL, 0);
+            case KeyEvent.KEYCODE_F2: // CALL
+                App.getInstance().customModuleManager(FinalMainServer.MODULE_CODE_BT, FinalBt.C_PICKUP, 0);
                 break;
-            case KeyEvent.KEYCODE_F3:
-                Toast.makeText(App.getInstance(), "ENDCALL", Toast.LENGTH_SHORT).show();
+            case KeyEvent.KEYCODE_F3: // END CALL
                 App.getInstance().customModuleManager(FinalMainServer.MODULE_CODE_BT, FinalBt.C_HANG, 0);
                 break;
             case KeyEvent.KEYCODE_F4: // M: Toggle recents
-                Toast.makeText(App.getInstance(), "M", Toast.LENGTH_SHORT).show();
                 ToggleService.getInstance().doAction();
+                break;
+            // ****************
+            // START LONG PRESS KEYCODES
+            // ****************
+            case KeyEvent.KEYCODE_F5: // GPS Long Press
+                Toast.makeText(App.getInstance(), String.valueOf(keyCode), Toast.LENGTH_SHORT).show();
+                break;
+            case KeyEvent.KEYCODE_F6: // CALL Long Press
+                App.getInstance().customModuleManager(FinalMainServer.MODULE_CODE_MAIN, FinalMain.C_VA_CMD, FinalMain.VA_CMD_PHONE_CONTACT);
+                execKeyCode(KeyEvent.KEYCODE_CALL);
+                break;
+            case KeyEvent.KEYCODE_F7: // ENDCALL Long Press
+                App.getInstance().customModuleManager(FinalMainServer.MODULE_CODE_BT, FinalBt.C_HANG, 0);
+                break;
+            case KeyEvent.KEYCODE_F8: // M Long Press
+                execKeyCode(KeyEvent.KEYCODE_VOICE_ASSIST);
+                break;
+            case KeyEvent.KEYCODE_F9: // MEDIA_PLAY/PAUSE Long Press
+                Toast.makeText(App.getInstance(), String.valueOf(keyCode), Toast.LENGTH_SHORT).show();
+                break;
+            case KeyEvent.KEYCODE_F10: // VOL_UP Long Press
+                Toast.makeText(App.getInstance(), String.valueOf(keyCode), Toast.LENGTH_SHORT).show();
+                break;
+            case KeyEvent.KEYCODE_F11: // VOL_DOWN Long Press
+                Toast.makeText(App.getInstance(), String.valueOf(keyCode), Toast.LENGTH_SHORT).show();
+                break;
+            case KeyEvent.KEYCODE_F12: // VOL_MUTE Long Press
+                Toast.makeText(App.getInstance(), String.valueOf(keyCode), Toast.LENGTH_SHORT).show();
+                break;
+            case KeyEvent.KEYCODE_SHIFT_RIGHT: // MEDIA_NEXT Long Press
+                if (SYU_RADIO_PACKAGE.equals(fgPackage))
+                    App.getInstance().radioSeekUp();
+                else if (fgPackage.startsWith(SYU_GENERIC_PACKAGE))
+                    App.getInstance().playerCommand(FinalMain.VA_CMD_KEY_FF);
+                else
+                    App.getInstance().mediaSF();
+                break;
+            case KeyEvent.KEYCODE_SHIFT_LEFT: // MEDIA_PREV Long Press
+                if (SYU_RADIO_PACKAGE.equals(fgPackage))
+                    App.getInstance().radioSeekDown();
+                else if (fgPackage.startsWith(SYU_GENERIC_PACKAGE))
+                    App.getInstance().playerCommand(FinalMain.VA_CMD_KEY_FB);
+                else
+                    App.getInstance().mediaSB();
                 break;
         }
 
@@ -81,7 +121,7 @@ public class MediaKeysMapper {
 
     private static void execKeyCode(int keyCode) {
         try {
-            Runtime.getRuntime().exec("input keyevent " + keyCode);
+            Runtime.getRuntime().exec(new String[] {"su", "-c","input keyevent " + keyCode});
         } catch (IOException e) {
             Log.e(LOG_TAG, "Error in execKeyCode", e);
         }
